implementando tela de controle de gastos

--- a/.sonar/sonar-scanner-4.7.0.2747-windows/conf/sonar-scanner.properties
+++ b/.sonar/sonar-scanner-4.7.0.2747-windows/conf/sonar-scanner.properties
@@ -4,8 +4,10 @@
 #----- Default SonarQube server
 sonar.host.url=http://localhost:9000
 
-#----- Default source code encoding
-sonar.sourceEncoding=UTF-8
+sonar.sources=dindin_app
 
-sonar.source=.
+#----- Default source code encoding
+#sonar.sourceEncoding=UTF-8
+
+
 
